# origin

./: .gitignore
01_basic_progr_cpp/: 01_in_1201.txt  01_in_1204.txt  01_in_122.txt  01_out_1203.txt  01_task_03.cpp  01_task_0401.cpp  01_task_043.cpp  01_task_04_777.cpp  01_task_0501.cpp  01_task_0504.cpp  01_task_0602.cpp  01_task_0801.cpp  01_task_0802.cpp  01_task_0902.cpp  01_task_101.cpp  01_task_102.cpp  01_task_111.cpp  01_task_1201.cpp  01_task_1203.cpp  01_task_122.cpp  01_task_123.cpp  task_1.10_3.cpp  task_1.11_2.cpp  task_1.12_4.cpp  task_1.4_2.cpp  task_1.5_2.cpp  task_1.5_3.cpp  task_1.6_1.cpp  task_1.6_3.cpp  task_1.7_1.cpp  task_1.7_2.cpp  task_1.9_1.cpp  task_1.9_3.cpp
02_base_progr_cpp/02_course_paper/: 02_course_paper.cpp  02_course_paper.sln  02_course_paper.vcxproj  CMakeLists.txt  race_emulator.cpp  race_emulator.sln  race_emulator.vcxproj  race_emulator.vcxproj.filters  термины.txt
02_base_progr_cpp/02_task_0101/: in.txt
02_base_progr_cpp/02_task_011/: 02_task_011.cpp  02_task_011.sln  02_task_011.vcxproj  out.txt
02_base_progr_cpp/02_task_01_1/: 02_task_01_1.cpp
02_base_progr_cpp/02_task_0201/: 02_task_021.cpp
02_base_progr_cpp/02_task_0202/: 02_task_022.vcxproj
02_base_progr_cpp/02_task_0203/: 02_task_023.cpp
02_base_progr_cpp/02_task_021/: 02_task_021.sln  02_task_021.vcxproj
02_base_progr_cpp/02_task_023/: 02_task_023.sln
02_base_progr_cpp/02_task_02_1/: 02_task_02_1.cpp
02_base_progr_cpp/02_task_02_2/: 02_task_02_2.cpp  02_task_02_2.sln
02_base_progr_cpp/02_task_02_3/: 02_task_02_3.vcxproj
02_base_progr_cpp/02_task_0301/: 02_task_031.vcxproj
02_base_progr_cpp/02_task_031/: 02_task_031.cpp
02_base_progr_cpp/02_task_032/: 02_task_032.cpp  02_task_032.sln
02_base_progr_cpp/02_task_03_1/: 02_task_03_1.sln
02_base_progr_cpp/02_task_03_2/: 02_task_03_2.vcxproj
02_base_progr_cpp/02_task_0401/: in.txt
02_base_progr_cpp/02_task_0402/: 02_task_042.cpp
02_base_progr_cpp/02_task_041/: 02_task_041.sln
02_base_progr_cpp/02_task_042/: in.txt
02_base_progr_cpp/02_task_04_1/: 02_task_04_1.cpp  02_task_04_1.vcxproj  out.txt
02_base_progr_cpp/02_task_04_2/: 02_task_04_2.sln  02_task_04_2.vcxproj  out.txt
02_base_progr_cpp/02_task_0501/: 02_task_051.vcxproj
02_base_progr_cpp/02_task_0502/: 02_task_052.vcxproj
02_base_progr_cpp/02_task_0503/: 02_task_053.cpp  02_task_053.sln
02_base_progr_cpp/02_task_051/: 02_task_051.sln
02_base_progr_cpp/02_task_1002/: CMakeLists.txt  equilateral_triangle.cpp  print_info.h  quadrilateral.h  right_angled_triangle.cpp  scalene_triangle.cpp  scalene_triangle.h  square.h
04_adv_progr_cpp/04_task_0401/: 04_task_0401.cpp  04_task_0401.sln  04_task_0401.vcxproj  CMakeLists.txt
04_adv_progr_cpp/04_task_0402/: 04_task_0402.cpp  04_task_0402.h  CMakeLists.txt
05_data_base/05_task_0501/: 0501_client_manager.cpp  0501_client_manager.h  05_task_0501.cpp  CMakeLists.txt
08_qt/08_task_0101/: main.cpp  (+1 more)
08_qt/08_task_0201/: CMakeLists.txt  main.cpp
08_qt/08_task_0501/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
(+334 files in other folders)
