cmake_minimum_required(VERSION 3.29)

project(08_task_0501 VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets)

set(PROJECT_SOURCES
  main.cpp
  mainwindow.cpp
  mainwindow.h
  stopwatch.h
  stopwatch.cpp
  mainwindow.ui
)

add_executable(08_task_0501
  ${PROJECT_SOURCES}
)

target_link_libraries(08_task_0501 PRIVATE Qt6::Widgets)